--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="icon-logo.png"/>
+    <link rel="shortcut icon" type="image/png" href="favicons/favicon.ico"/>
+    <link rel="icon" type="image/png" href="favicons/android-chrome-192x192.png" sizes=192x192>
     <meta
       name="description"
       content="Web site created using create-react-app"
